Initialization and Training of DCQN agent

--- a/Deep_Convolutional_Q_Learning_for_Pac_Man.ipynb
+++ b/Deep_Convolutional_Q_Learning_for_Pac_Man.ipynb
@@ -45,7 +45,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34a03310-1059-4fbd-fa65-5825ec17a252"
+        "outputId": "41c59a66-94cd-4d95-cf8e-981a8b883e88"
       },
       "outputs": [
         {
@@ -73,7 +73,7 @@
             "Collecting ale-py>=0.9 (from gymnasium[accept-rom-license,atari])\n",
             "  Downloading ale_py-0.10.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (7.6 kB)\n",
             "Downloading ale_py-0.10.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m21.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m24.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: ale-py\n",
             "Successfully installed ale-py-0.10.1\n",
             "Requirement already satisfied: ale-py in /usr/local/lib/python3.11/dist-packages (0.10.1)\n",
@@ -92,7 +92,7 @@
             "After this operation, 5,542 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 swig4.0 amd64 4.0.2-1ubuntu1 [1,110 kB]\n",
             "Get:2 http://archive.ubuntu.com/ubuntu jammy/universe amd64 swig all 4.0.2-1ubuntu1 [5,632 B]\n",
-            "Fetched 1,116 kB in 0s (2,608 kB/s)\n",
+            "Fetched 1,116 kB in 1s (962 kB/s)\n",
             "Selecting previously unselected package swig4.0.\n",
             "(Reading database ... 120570 files and directories currently installed.)\n",
             "Preparing to unpack .../swig4.0_4.0.2-1ubuntu1_amd64.deb ...\n",
@@ -110,16 +110,16 @@
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (0.0.4)\n",
             "Collecting box2d-py==2.3.5 (from gymnasium[box2d])\n",
             "  Downloading box2d-py-2.3.5.tar.gz (374 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m374.4/374.4 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m374.4/374.4 kB\u001b[0m \u001b[31m144.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: pygame>=2.1.3 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.6.1)\n",
             "Collecting swig==4.* (from gymnasium[box2d])\n",
             "  Downloading swig-4.3.0-py2.py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.whl.metadata (3.5 kB)\n",
             "Downloading swig-4.3.0-py2.py3-none-manylinux_2_5_x86_64.manylinux1_x86_64.whl (1.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m41.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m44.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: box2d-py\n",
             "  Building wheel for box2d-py (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for box2d-py: filename=box2d_py-2.3.5-cp311-cp311-linux_x86_64.whl size=2351178 sha256=d20633799447c6d307a209c8fde6ff8ef143a6cdfa26514dcf6accc27f6e92f2\n",
+            "  Created wheel for box2d-py: filename=box2d_py-2.3.5-cp311-cp311-linux_x86_64.whl size=2351178 sha256=f645e4b956db6a47c047ca1762bf658dcc3573371261240b7dcec5622fa270ad\n",
             "  Stored in directory: /root/.cache/pip/wheels/ab/f1/0c/d56f4a2bdd12bae0a0693ec33f2f0daadb5eb9753c78fa5308\n",
             "Successfully built box2d-py\n",
             "Installing collected packages: swig, box2d-py\n",
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BJKPSmcjAoHU"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -253,9 +253,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16b1c27b-62fa-4d17-9881-1ef1467fc5ef"
+        "outputId": "ec62c31e-5fbd-4530-e5ed-48113b575a7f"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "gFmX10ncEsUg"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "iJcUhPRKGSZ2"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "-cgy3LAXHGYN"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -396,6 +396,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "agent = Agent(number_actions)"
+      ],
+      "metadata": {
+        "id": "qa9jiLbqh734"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Training the DCQN agent"
@@ -403,6 +414,44 @@
       "metadata": {
         "id": "CK6Zt_gNmHvm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number_episodes = 2000\n",
+        "maximum_number_timesteps_per_episode = 10000\n",
+        "epsilon_starting_value  = 1.0\n",
+        "epsilon_ending_value  = 0.01\n",
+        "epsilon_decay_value  = 0.995\n",
+        "epsilon = epsilon_starting_value\n",
+        "scores_on_100_episodes = deque(maxlen = 100)\n",
+        "\n",
+        "for episode in range(1, number_episodes + 1):\n",
+        "  state, _ = env.reset()\n",
+        "  score = 0\n",
+        "  for t in range(maximum_number_timesteps_per_episode):\n",
+        "    action = agent.act(state, epsilon)\n",
+        "    next_state, reward, done, _, _ = env.step(action)\n",
+        "    agent.step(state, action, reward, next_state, done)\n",
+        "    state = next_state\n",
+        "    score += reward\n",
+        "    if done:\n",
+        "      break\n",
+        "  scores_on_100_episodes.append(score)\n",
+        "  epsilon = max(epsilon_ending_value, epsilon_decay_value * epsilon)\n",
+        "  print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(episode, np.mean(scores_on_100_episodes)), end = \"\")\n",
+        "  if episode % 100 == 0:\n",
+        "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(episode, np.mean(scores_on_100_episodes)))\n",
+        "  if np.mean(scores_on_100_episodes) >= 500.0:\n",
+        "    print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(episode - 100, np.mean(scores_on_100_episodes)))\n",
+        "    torch.save(agent.local_qnetwork.state_dict(), 'checkpoint.pth')\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "fSRjW9tliEB0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -415,28 +464,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "cb9nVvU2Okhk",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        },
-        "outputId": "6f47f637-e664-4b6e-a7c2-4b0118b05634"
+        "id": "cb9nVvU2Okhk"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'agent' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-6261a2f96b76>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mimageio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmimsave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'video.mp4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mshow_video_of_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MsPacmanDeterministic-v0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mshow_video\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'agent' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import glob\n",
         "import io\n",
